--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,23 @@ rvm:
   - 1.9.2
   - 1.9.3
   - ruby-head
-  - ree
   - jruby-18mode
   - jruby-19mode
   - rbx-18mode
   - rbx-19mode
+
+env:
+  - RAILS_VERSION=3.1.0
+  - RAILS_VERSION=3.2.0
+  - RAILS_VERSION=4.0
+
+matrix:
+  exclude:
+    - rvm: 1.8.7
+      env: RAILS_VERSION=4.0
+    - rvm: 1.9.2
+      env: RAILS_VERSION=4.0
+    - rvm: jruby-18mode
+      env: RAILS_VERSION=4.0
+    - rvm: rbx-18mode
+      env: RAILS_VERSION=4.0
